# slack-bug-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_slack_app.md
docs/plans/: 2026-02-23-git-worktree-isolation-design.md  2026-02-23-git-worktree-isolation-plan.md  2026-02-23-guardrails-design.md  2026-02-23-guardrails-implementation.md
src/: agent_context.py  agent_launcher.py  asana_client.py  config.py  guardrails.py  main.py  setup_wizard.py  slack_listener.py  worktree.py
tests/: test_guardrails.py  test_worktree.py
